# AHC061-RL

./: .clang-format  .clang-tidy  .gitignore  BLOG_ja.md  README.md  atcoder_compile_command.txt  main.cpp  pyproject.toml  tester.cfg
exps/: __init__.py
exps/exp001/: README.md
exps/exp001/ahc061_exp001/: __init__.py  cpp_ext.py  env.py  models.py
exps/exp001/ahc061_exp001/ppo/: gae.py  rollout.py  update.py
exps/exp001/ahc061_exp001/scripts/: bench_rollout.py  bench_train.py  distill.py  eval_tools.py  make_submit_torchscript.py  test_tools_replay.py  train_ppo.py
exps/exp001/cpp_ext/src/: ahc061_ext.cpp
exps/exp001/submit/: always_stay.py  solver_base.cpp
exps/exp002/: README.md  __init__.py
exps/exp002/ahc061_exp002/: ckpt.py  cpp_ext.py  env.py  models.py  run_dir.py
exps/exp002/ahc061_exp002/ppo/: gae.py  rollout.py  update.py
exps/exp002/ahc061_exp002/scripts/: bench_rollout.py  distill.py  (+5 more)
exps/exp002/submit/: solver_base.cpp  solver_base_compact.cpp  solver_base_compact_ppconcat.cpp  solver_base_compact_ppconcat_c7_huff122_h112b16.cpp  solver_base_compact_ppconcat_c7_huff122_h112b18.cpp  solver_base_compact_ppconcat_c7_huff91_h112b16.cpp  solver_base_compact_ppconcat_c7_huff91_h112b18.cpp  solver_base_compact_ppconcat_c7_huff91_h112b20.cpp  solver_base_compact_ppconcat_c7_huff91_h112b20_pcatonly.cpp  solver_base_compact_ppconcat_c7_huff91_h96b17_full.cpp
exps/exp003/: README.md  __init__.py
exps/exp003/ahc061_exp003/: cpp_ext.py
exps/exp004/: README.md  __init__.py
exps/exp004/ahc061_exp004/: __init__.py
script/: run.sh  tools.sh
(+40 files in other folders)
