[project]
name = "ahc061"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "psytester>=0.5.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "wandb>=0.25.0",
]
